<resources>
    <string name="app_name">photo</string>


    <string name="ok">Đồng ý</string>

    <string name="Image">Ảnh</string>
    <string name="Album">Album</string>


    <string name="Edit">Chỉnh sữa</string>
    <string name="InFor">Xem Thông Tin</string>
    <string name="Delete">Xóa</string>
    <string name="Share">Chia sẻ</string>

    <string name="TakePhoto">Chụp Ảnh</string>
    <string name="Recording">Quay Phim</string>
    <string name="ChangeTheme">Đổi Giao Diện</string>
    <string name="preference_file_key" translatable="false">loadTheme</string>
    <string name="slide">Trình Chiếu</string>
    <string name="DefaultImage">Đặt hình nền</string>

    <string name="Finished">Trình Chiếu Kết Thúc</string>
    <string name="Start">Bắt đầu</string>

    <string name="info">Thông tin</string>

    <string name="date">Thời Gian</string>
    <string name="size">Kích Thước</string>
    <string name="pixel" translatable="false">Pixel</string>
    <string name="path">Đường dẫn</string>
    <string name="name">Tên</string>
    <string name="location">Địa điểm</string>
    <string name="copy">Sao chép</string>
    <string name="selectPath">Chọn đường dẫn</string>
    <string name="cancel" translatable="false">Tắt</string>
    <string name="fail">Thất bại</string>
    <string name="like">Thích ảnh</string>
    <string name="unlike">Bỏ Thích</string>
    <string name="hiddenMode">Chế độ ẩn</string>
    <string name="hidden">Ẩn</string>
    <string name="inputPassword">Nhập mật khẩu</string>
    <string name="inputPasswordAgain">Nhập lại mật khẩu</string>
    <string name="newpassword">Mật khẩu mới</string>
    <string name="errorNotSame">Mật khẩu không giống</string>
    <string name="password">Mật khẩu</string>
    <string name="errorNotTrue">Mật khẩu không đúng</string>
    <string name="publicMode">Xem tất cả</string>
    <string name="Locatenoti">Không có vị trí</string>
    <string name="column">hàng</string>
    <string name="photo">Ảnh</string>


</resources>