<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_TakePhoto"
        android:title="@string/TakePhoto"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_Recording"
        android:title="@string/Recording"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_switch_video_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_Theme"
        android:title="@string/ChangeTheme"
        android:enabled="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/item_slide"
        android:title="@string/slide"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/item_HiddenMode"
        android:title="@string/hiddenMode"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/item_PublicMode"
        android:title="@string/publicMode"
        app:showAsAction="never"
        />
</menu>